--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -69,7 +69,6 @@
 \newcommand{\Z}{\mathbb{Z}} % integers
 \newcommand{\C}{\mathbb{C}} % complex
 \newcommand{\I}{\mathbb{I}} % set of integers
-\newcommand{\K}{\mathbb{K}} % field
 \newcommand{\fA}{\mathfrak{A}} % alternating group
 \newcommand{\fB}{\mathfrak{S}^\textsc{b}} % signed symmetric group
 \newcommand{\cA}{\mathcal{A}} % algebra
@@ -87,6 +86,8 @@
 \newcommand{\Un}{\mathrm{U}} % unordered IJ
 \newcommand{\Or}{\mathrm{O}} % ordered IJ
 \newcommand{\PT}{\mathrm{PT}} %planar trees
+\newcommand{\K}{\mathrm{K}} %associahedra
+\newcommand{\J}{\mathrm{J}} %multiplihedra
 
 % math commands
 \newcommand{\set}[2]{\left\{ #1 \;\middle|\; #2 \right\}} % set notation
@@ -4797,6 +4798,7 @@ One can use the isomorphism $t(r\times r)$ as in the following example.
 \label{ex:matrix shifts}
 The first row of the following diagram contains a sequence of admissible $\SU$ subset shifts applied to the matrix encoding of the SCP $256|4|17|3\times 6|5|147|13$. 
 The second row is the image of these shifts under the isomorphism $t(r\times r)$.
+Note that the shifts of this example are also isomorphic to those of \cref{ex:shift translation by theta}, under the isomorphism  $(rs\times rs)$.
 \begin{center}
 {\footnotesize
 \begin{tikzcd}[column sep = 0.5cm]
@@ -4864,7 +4866,6 @@ The second row is the image of these shifts under the isomorphism $t(r\times r)$
 \end{tikzcd}
 }
 \end{center}
-Note that the shifts of this example are also isomorphic to those of \cref{ex:shift translation by theta}, under the isomorphism  $(rs\times rs)$.
 \end{example}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -4881,6 +4882,7 @@ Then, we show that these topological operad structures are isomorphic (\cref{sub
 However, note this isomorphism does not commute with the diagonal maps (\cref{ex:iso-not-Hopf}).
 Finally, we show that contrary to the case of permutahedra, the faces of the $\LA$ and $\SU$ diagonals of the operahedra are in general not in bijection (\cref{subsec:tensor-products}).
 However, from a homotopical point of view, the two tensor products of homotopy operads that they define are $\infty$-isomorphic (\cref{thm:infinity-iso}). 
+\Guillaume{TBW}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -4888,25 +4890,36 @@ However, from a homotopical point of view, the two tensor products of homotopy o
 
 %%%%%%%%%%%%%%%
 
-\subsection{Topological operadic structures on the operahedra}
+\subsection{Topological operadic structures}
 \label{subsec:top-operadic-structures}
 
-The permutahedra are part of a more general family of polytopes called Loday realizations of the \emph{operahedra}~\cite[Def.~2.9]{LaplanteAnfossi} which encodes the notion of homotopy operad~\cite[Def.~4.11]{LaplanteAnfossi} (we consider here only \emph{non-symmetric non-unital} homotopy operads).
-For every planar tree $t$, there is a corresponding polytope $P_t$ whose codimension $k$ faces are in bijection with nestings of $t$ with $k$ non-trivial nests.
-Since the operahedra are generalized permutahedra~\cite[Coro.~2.16]{LaplanteAnfossi}, a choice of diagonal for the permuthedra induces a choice of diagonal for every operahedron~\cite[Coro.~1.31]{LaplanteAnfossi}.
-Every face of an operahedron is isomorphic to a product of lower-dimensional operahedra, via an isomorphism $\Theta$ which generalizes the one above, see Point (5) of~\cite[Prop.~2.3]{LaplanteAnfossi}.
+The permutahedra are part of a more general family of polytopes called Loday realizations of the \emph{operahedra}~\cite[Def.~2.9]{LaplanteAnfossi}, which encodes the notion of homotopy operad~\cite[Def.~4.11]{LaplanteAnfossi} (we consider here only \emph{non-symmetric non-unital} homotopy operads).
+Let $\PT_n$ be the set of planar trees with $n$ internal edges, which are labelled by $[n]$ using the infix order.
+For every planar tree $t$, there is a corresponding operahedron $P_t$ whose codimension~$k$ faces are in bijection with nestings of $t$ with $k$ non-trivial nests.
 
-\begin{definition}
-An \emph{operadic diagonal} for the operahedra is a choice of diagonal $\triangle_t$ for each operahedron~$P_t$, such that $\triangle \eqdef \{\triangle_t\}$ commutes with the map $\Theta$, \ie it satisfies~\cite[Prop.~4.14]{LaplanteAnfossi}.
+\begin{definition}[{\cite[Def.~2.1 \& 2.22]{LaplanteAnfossi}}]
+	A \defn{nest} of $t \in \PT_n$ is a subset of internal edges which induce a subtree, and a \defn{nesting} of $t$ is a family of nests which are either included in one another, or disjoint.
+	See \cref{ex:Validity example}.
 \end{definition}
 
-\begin{theorem}[Operadic structures on the operahedra] 
+Since the operahedra are generalized permutahedra~\cite[Coro.~2.16]{LaplanteAnfossi}, a choice of diagonal for the permuthedra induces a choice of diagonal for every operahedron~\cite[Coro.~1.31]{LaplanteAnfossi}.
+Every face of an operahedron is isomorphic to a product of lower-dimensional operahedra, via an isomorphism~$\Theta$ which generalizes the one from \cref{subsec:operadicProperty}, see Point (5) of~\cite[Prop.~2.3]{LaplanteAnfossi}.
+
+\begin{definition}
+An \emph{operadic diagonal} for the operahedra is a choice of diagonal $\triangle_t$ for each Loday operahedron~$P_t$, such that $\triangle \eqdef \{\triangle_t\}$ commutes with the map $\Theta$, \ie it satisfies~\cite[Prop.~4.14]{LaplanteAnfossi}.
+\end{definition}
+
+An operadic diagonal gives rise to topological operad structure on the set of Loday operahedra \cite[Thm 4.18]{LaplanteAnfossi}, and via the functor of cellular chains, to a universal tensor product of homotopy operads \cite[Prop. 4.27]{LaplanteAnfossi}. 
+Here, by \defn{universal} we mean a formula that applies uniformly to \emph{any} pair of homotopy operads. 
+Since such an operad structure and tensor product are induced by a geometric diagonal, we shall call them \defn{geometric}.
+
+\begin{theorem}
 \label{thm:operahedra}
 There are exactly 
 \begin{enumerate}
-\item two operadic diagonals of the Loday operahedra, given by the $\LA$ and $\SU$ diagonals, therefore exactly
-\item two colored topological cellular operad structures on the Loday operahedra, and incidentally exactly
-\item two universal tensor products of homotopy operads,
+\item two geometric operadic diagonals of the Loday operahedra, given by the $\LA$ and $\SU$ diagonals, therefore exactly
+\item two geometric colored topological cellular operad structures on the Loday operahedra, and incidentally exactly
+\item two geometric universal tensor products of homotopy operads,
 \end{enumerate}
 which agree with the generalized Tamari order on fully nested trees. 
 \end{theorem}
@@ -4926,24 +4939,72 @@ Finally, since only vectors with strictly descreasing coordinates induce the gen
 
 This answers a question raised in~\cite[Rem.~3.14]{LaplanteAnfossi}.
 
-\begin{remark}
-Two other important families of generalized permutahedra are the \emph{Loday associahedra} and \emph{Forcey--Loday multiplihedra}, which encode respectively $\Ainf$-algebras and $\Ainf$-morphisms~\cite[Prop.~4.9]{LaplanteAnfossiMazuir}, as well as $\Ainf$-categories and $\Ainf$-functors~\cite[Sect.~4.3]{LaplanteAnfossiMazuir}.
-Using the same techniques as in the case of the operahedra, they were endowed with diagonals and compatible operad and operadic bimodule structures in~\cite[Thm.~1]{LaplanteAnfossiMazuir}.
-An analogous notion of \emph{operadic diagonal} is available for these polytopes, see~\cite[Prop.~2.14]{LaplanteAnfossiMazuir}.
-It seems likely that a statement similar to \cref{thm:operahedra} holds for tensor products of $\Ainf$-morphisms. 
-However, it is not immediately clear to the authors how to follow the strategy of~\cite{LaplanteAnfossiMazuir} with a vector inducing the $\SU$ diagonal on the permutahedra.
-\end{remark}
-
 \begin{example}
 The Loday associahedra correspond to the Loday operahedra associated with linear trees~\cite[Sect. 2.2]{LaplanteAnfossi}, and define a suboperad.
 The restriction of the two operad structures of \cref{thm:operahedra} coincide in this case, and both the $\LA$ and $\SU$ diagonals induce the \emph{magical formula} of~\cite{MarklShnider, MasudaThomasTonksVallette, SaneblidzeUmble-comparingDiagonals} defining a universal tensor product of $\Ainf$-algebras. 
 \end{example}
 
 \begin{example}
-The restriction of \cref{thm:operahedra} to the permutahedra associated with $2$-leveled trees gives two distinct universal tensor products of homotopy associative \emph{permutads}, as studied in~\cite{LodayRonco-permutads,Markl}.
+The restriction of \cref{thm:operahedra} to the permutahedra associated with $2$-leveled trees gives two distinct universal tensor products of permutadic $\Ainf$-algebras, as studied in~\cite{LodayRonco-permutads,Markl}.
 \end{example}
 
-We shall see now that the two operad structures on the operahedra are related to one another in the strongest possible sense: they are isomorphic as topological cellular colored operads.
+Two other important families of operadic polytopes are the \emph{Loday associahedra} and \emph{Forcey--Loday multiplihedra}, which encode respectively $\Ainf$-algebras and $\Ainf$-morphisms~\cite[Prop.~4.9]{LaplanteAnfossiMazuir}, as well as $\Ainf$-categories and $\Ainf$-functors~\cite[Sect.~4.3]{LaplanteAnfossiMazuir}.
+For every linear tree $t \in \PT_n$, there is a corresponding Loday associahedron $\K_n$, whose faces are in bijection with nestings of $t$, and a Forcey--Loday multiplihedron $\J_n$ whose faces are in bijection with $2$-colored nestings of $t$.
+
+\begin{definition}[{\cite[Def. 3.2]{LaplanteAnfossiMazuir}}]
+	A \defn{$2$-colored nesting} is a nesting where each nest $N$ is either blue, red, or blue and red (purple), and which satisfies that if $N$ is blue or purple (\resp red or purple), then all nests contained in $N$ are blue (\resp red). \Guillaume{Add example?}
+\end{definition}
+
+The Loday associahedra are faces of the Forcey--Loday multiplihedra: they correspond to $2$-colored nestings where all the nests are of the same color (either blue or red). 
+
+Forcey--Loday realizations of the multiplihedra are not generalized permutahedra, but they are projections of the Ardila--Doker realizations, which are \cite[Prop. 1.16]{LaplanteAnfossiMazuir}.
+A choice of diagonal for the permutahedra thus induces a choice of diagonal for every Ardila--Doker multiplihedron, and a subset of these choices (the ones which satisfy \cite[Prop. 2.7 \& 2.8]{LaplanteAnfossiMazuir}) further induce a choice of diagonal for the Forcey--Loday multiplihedra.
+Every face of a Forcey--Loday multiplihedron is isomorphic to a product of lower-dimensional Forcey--Loday multiplihedra and Loday associahedra, via an isomorphism $\Theta$ similar to the one from \cref{subsec:operadicProperty}, see Point (4) of \cite[Prop. 1.10]{LaplanteAnfossiMazuir}.
+
+\begin{definition}
+	An \defn{operadic diagonal} for the multiplihedra is a choice of diagonal $\triangle_n$ for each multiplihedron $\J_n$, such that $\triangle \eqdef \{\triangle_n\}$ commutes with the map $\Theta$.
+\end{definition}
+
+An operadic diagonal endows the Loday associahedra with a topological operad structure \cite[Thm.~1]{MasudaThomasTonksVallette}, and the Forcey--Loday multiplihedra with a topological operadic bimodule structure over the operad of Loday associahedra \cite[Thm.~1]{LaplanteAnfossiMazuir}.
+Via the functor of cellular chains, it defines universal tensor products of $\Ainf$-algebras and $\Ainf$-morphisms \cite[Prop. 4.15 \& 4.18]{LaplanteAnfossiMazuir}.
+Here again, by \emph{universal} we mean a formula that applies uniformly to any pair of $\Ainf$-algebras or $\Ainf$-morphisms.
+We shall call such geometrically defined operadic structures and tensor products \emph{geometric}. 
+
+\begin{theorem}
+\label{thm:multiplihedra}
+There are exactly 
+\begin{enumerate}
+\item two geometric operadic diagonals of the Forcey--Loday multiplihedra, given by the $\LA$ and $\SU$ diagonals, therefore exactly
+\item two geometric topological cellular colored operad structures (over the Loday associahedra) on the Forcey--Loday multiplihedra, and incidentally exactly
+\item two compatible geometric universal tensor products of $\Ainf$-algebras and $\Ainf$-morphisms,
+\end{enumerate}
+which agree with the Tamari-type order on $2$-colored planar trees. 
+\end{theorem}
+
+\begin{proof}
+Let us first examine Point (1).
+Consider the vectors $\b{v}_\LA \eqdef (1,2^{-1},2^{-2},\ldots,2^{-n+1})$ and $\b{v}_\SU \eqdef (2^n-1,2^{n}-2,2^n-2^2,\ldots,2^n-2^{n-1})$ in $\R^n$.
+As previously observed, they induce the $\LA$ and $\SU$ diagonals on the permutahedra (\cref{def:LA-and-SU}).
+One checks directly that both vectors satisfy \cite[Prop. 2.7 \& 2.8]{LaplanteAnfossiMazuir}, and thus define diagonals of the Forcey--Loday multiplihedron~$\J_n$ which agree with the Tamari-type order \cite[Prop. 2.10]{LaplanteAnfossiMazuir}.
+Moreover, these diagonals commute with the map $\Theta$ for the Forcey--Loday multiplihedra \cite[Prop. 2.14]{LaplanteAnfossiMazuir}; this is because after deleting the last coordinate of $\b{v}_\LA$ or $\b{v}_\SU$, and then applying $\Theta^{-1}$, we still have vectors which induce the $\LA$ or $\SU$ diagonal, respectively. 
+
+By \cref{thm:unique-operadic}, we know that if one of the two choices $\LAD$ or $\SUD$ is made on a multiplihedron $\J_n$, one has to make the same choice on every lower-dimensional multiplihedra and associahedra appearing in the product decomposition of any face of~$\J_n$. 
+Now suppose that one makes two distinct choices for two multiplihedra $\J_n$ and $\J_{n'}$.
+It is easy to find a bigger multiplihedron $\J_{n''}$, for which $\J_n$ and $\J_{n'}$ appear in the produt decomposition of a face of $\J_{n''}$ and by the preceding remark, any choice of diagonal for $\J_{n''}$ will then contradict our initial two choices. 
+Thus, these had to be the same from the start, which conclude the proof of Point (1). 
+
+Point (2) then follows from the fact that a choice of diagonal for the Loday associahedra and the Forcey--Loday mutiplihedra \emph{forces} a unique topological cellular colored operad and operadic bimodule structure on them, see~\cite[Thm.~1]{MasudaThomasTonksVallette} and \cite[Thm.~1]{LaplanteAnfossiMazuir}.
+Since a universal tensor products of $\Ainf$-algebras, and a compatible universal tensor products of $\Ainf$-morphisms are induced by an operad and operadic bimodule structures on the associahedra and multiplihedra respectively~\cite[Sec.~4.2.3]{LaplanteAnfossiMazuir}, we obtain Point~(3).
+Finally, since only vectors with strictly descreasing coordinates induce the Tamari-type order on the skeleton of the Loday multiplihedra~\cite[Prop. 2.10]{LaplanteAnfossiMazuir}, we get the last part of the statement. 
+\end{proof}
+
+This answers a question raised in~\cite[Rem.~3.9]{LaplanteAnfossiMazuir}.
+
+\begin{remark}
+	Considering all $2$-colored nested trees instead of only linear trees, one should obtain similar results for tensor products of $\infty$-morphisms of homotopy operads.
+\end{remark}
+
+We shall see now that the two operad (\resp operadic bimodule) structures on the operahedra (\resp multiplihedra) are related to one another in the strongest possible sense: they are isomorphic as topological cellular colored operads.
 
 %%%%%%%%%%%%%%%
 
@@ -5058,8 +5119,7 @@ Note that restricting to linear trees, the two tensor products of $\Ainf$-algebr
 Restricting to $2$-leveled trees, we obtain two tensor product of homotopy associative permutads whose terms are in bijection.
 For the operahedra in general, such a bijection does not exist, as the following computations show. 
 
-Let $\PT_n$ be the set of planar trees with $n$ internal edges, which are labelled by $[n]$ using the infix order.
-Recall that a \defn{nest} of $t \in \PT_n$ is a subset of internal edges which induce a subtree, and a \defn{nesting} of $t$ is a family of nests which are either included in one another, or disjoint \cite[Def.~2.1 \& 2.22]{LaplanteAnfossi}.
+
 
 \begin{definition}
 \label{def:valid}
@@ -5070,7 +5130,8 @@ For $t \in \PT_n$, we define $\LAD_t$ (\resp $\SUD_t$) to be the elements of $\L
 \end{definition}
 
 
-\begin{example}\label{ex:Validity example}
+\begin{example}
+\label{ex:Validity example}
 For the following planar tree, we label each internal edge in infix order by labelling the vertex directly above it, and illustrate the nestings $\{ \{1,2\},\{1,2,3\}, \{1,2,3,4,5\} \}$ and $\{ \{2\},\{2,5\}, \{1,2,3,4,5\} \}$.
 \begin{center}
 \begin{tikzpicture}[yscale=-1, every node/.style={draw, very thick, circle, inner sep=1pt}, edge from parent path={[very thick, draw] (\tikzparentnode) -- (\tikzchildnode)}]
@@ -5143,7 +5204,6 @@ $\{ \{1,2\},\{1,2,4,5\}, \{1,2,3,4,5\} \}$ nor $\{ \{3,5\},\{2,3,5\}, \{1,2,3,4,
 \end{tikzpicture}
 \end{center}
 Consequently,  $\mathbf{\red{12|45|3}} \times 25|4|13 \in \LAD$ and $3|12|45 \times \mathbf{\red{35|2|14}} \in \SUD$ are both invalid.
-
 \end{example}
 
 \begin{proposition}
