Add remark associahedra

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -4978,7 +4978,7 @@ There are exactly
 \item two geometric topological cellular colored operad structures (over the Loday associahedra) on the Forcey--Loday multiplihedra, and incidentally exactly
 \item two compatible geometric universal tensor products of $\Ainf$-algebras and $\Ainf$-morphisms,
 \end{enumerate}
-which agree with the Tamari-type order on $2$-colored planar trees. 
+which agree with the Tamari-type order on atomic $2$-colored nested planar trees. 
 \end{theorem}
 
 \begin{proof}
@@ -5001,10 +5001,16 @@ Finally, since only vectors with strictly descreasing coordinates induce the Tam
 This answers a question raised in~\cite[Rem.~3.9]{LaplanteAnfossiMazuir}.
 
 \begin{remark}
+	Note that in the case of the Loday associahedra, there is only one geometric operadic diagonal which induces the Tamari order atomic $2$-colored nested planar trees (equivalently, binary trees, see \cite[Fig.~6]{LaplanteAnfossiMazuir}).
+	Therefore, there is only one geometric topological operad structure, and only one geometric universal tensor product.
+	This is because any vector with strictly decreasing coordinates lives in the same chamber of the fundamental hyperplane arrangement of the Loday associahedra (see \cite[Ex.~1.21]{LaplanteAnfossi}).
+\end{remark}
+
+\begin{remark}
 	Considering all $2$-colored nested trees instead of only linear trees, one should obtain similar results for tensor products of $\infty$-morphisms of homotopy operads.
 \end{remark}
 
-We shall see now that the two operad (\resp operadic bimodule) structures on the operahedra (\resp multiplihedra) are related to one another in the strongest possible sense: they are isomorphic as topological cellular colored operads.
+We shall see now that the two operad (\resp operadic bimodule) structures on the operahedra (\resp multiplihedra) are related to one another in the strongest possible sense: they are isomorphic as topological cellular colored operads (\resp topological operadic bimodule structure over the associahedra).
 
 %%%%%%%%%%%%%%%
 
